force-app/main/default/objects/Shipment_Details__c/Shipment_Details__c.object-meta.xml
<CustomObject>
    <label>Shipment Details</label>
    <nameField>
        <displayFormat>SD-{0000}</displayFormat>
        <label>Shipment Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>