force-app/main/default/objects/Shipment_Details__c/fields/Event_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Type_Name__c</fullName>
    <label>Event Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>