force-app/main/default/objects/Shipment_Details__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment</label>
    <referenceTo>Shipment__c</referenceTo>
    <relationshipLabel>Shipment Details</relationshipLabel>
    <relationshipName>Shipment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>